--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "lodash": "^4.17.21",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "bignumber.js": "^9.1.2",
+    "mathjs": "^12.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
