--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/lodash": "^4.14.201",
+    "bignumber.js": "^9.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
+    "mathjs": "^12.0.0",
     "nest-winston": "^1.9.4",
+    "raw-body": "^2.5.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "bignumber.js": "^9.1.2",
-    "mathjs": "^12.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
