--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "mathjs": "^12.0.0",
     "nest-winston": "^1.9.4",
+    "password-validator": "^5.3.0",
     "raw-body": "^2.5.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
