--- a/playground/package.json
+++ b/playground/package.json
@@ -13,6 +13,7 @@
     "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
-    "mathjs": "^12.0.0"
+    "mathjs": "^12.0.0",
+    "password-validator": "^5.3.0"
   }
 }
