--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "mathjs": "^12.0.0",
+    "momentjs": "^2.0.0",
+    "morse": "^0.1.0",
     "nest-winston": "^1.9.4",
     "password-validator": "^5.3.0",
     "raw-body": "^2.5.2",
