--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "momentjs": "^2.0.0",
     "morse": "^0.1.0",
     "nest-winston": "^1.9.4",
+    "papaparse": "^5.4.1",
     "password-validator": "^5.3.0",
     "raw-body": "^2.5.2",
     "reflect-metadata": "^0.1.13",
